@@ -2,6 +2,7 @@ Version 7.2.3
 -------------
 
 - Accept `Throwable` instances as parameter to `Raven.sendException`.
+- Add `raven.async.shutdowntimeout` option.
 
 Version 7.2.2
 -------------
